style: fix mixin and spacing for button

--- a/src/core/Button/styles.css
+++ b/src/core/Button/styles.css
@@ -48,6 +48,7 @@
 .size-large {
     font-size: 16px;
     line-height: 19px;
+    letter-spacing: 0.57px;
     height: 43px;
     padding: 0 24px;
 }
