--- a/src/core/mixins/globals.css
+++ b/src/core/mixins/globals.css
@@ -1,9 +1,3 @@
 .boxmodel {
     box-sizing: border-box;
-    margin: 0 /* rtl:ignore */;
-    padding: 0 /* rtl:ignore */;
-    border: 0 /* rtl:ignore */;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
 }
